2019/03/11 version 0.0.5
- added loading screen before topics are loaded the 1st time
- updated .dockerignore
- make the docker image much smaller (from 585M to 97M)
- ensure newly added topic appears at top of list

2019/03/11 version 0.0.4
- added client-side table pagination

2019/03/10 version 0.0.3
- ported to patternfly-seed-javascript instead of create-react-app
- poll after topic create/delete before getting list
- add searchable dropdown to add topic form custom key
- fixed details row overflowing its contains and not scrolling
- fixed :focus outline on partition button
- fixed favicon not appearing
- cleaned up console logging

2019/03/07 version 0.0.2
- don't refresh list after create until created topic exists
- UI improvements based on feedback
- send "config" parameters with create request