@@ -3,6 +3,7 @@
 - updated .dockerignore
 - make the docker image much smaller (from 585M to 97M)
 - ensure newly added topic appears at top of list
+- update consumers column every 5 seconds
 
 2019/03/11 version 0.0.4
 - added client-side table pagination
